// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`back button renders normally 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    testID="DeprecatedBackButton"
    type="MissionHub"
  />
</View>
`;

exports[`back button renders with image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <IconButton
    image={12345}
    name="backIcon"
    onPress={[Function]}
    testID="DeprecatedBackButton"
    type="MissionHub"
  />
</View>
`;
